[gd_scene load_steps=6 format=3 uid="uid://bxuu77kvbmixu"]

[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_pred7"]
[ext_resource type="Script" path="res://scripts/ui/inventory_ui.gd" id="2_twpgx"]
[ext_resource type="PackedScene" uid="uid://tq5lx00lkfo2" path="res://resources/inventory_select_list.tscn" id="4_br31h"]
[ext_resource type="Script" path="res://scripts/cooking/cooking_handler.gd" id="4_nipys"]
[ext_resource type="Script" path="res://scripts/ui/item_description_box.gd" id="5_60gg5"]

[node name="UI" type="Control" groups=["ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pred7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CookingHandler" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 8.0
offset_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_nipys")

[node name="InventoryCenterer" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_twpgx")

[node name="Inventory" type="Control" parent="CanvasLayer/InventoryCenterer"]
layout_mode = 2
mouse_filter = 1

[node name="ItemListBackground" type="ColorRect" parent="CanvasLayer/InventoryCenterer/Inventory"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
offset_left = -210.0
offset_top = -321.0
offset_right = 598.0
offset_bottom = 46.0
mouse_filter = 1
color = Color(0.212305, 0.212305, 0.212305, 1)

[node name="InventoryLabel" type="Label" parent="CanvasLayer/InventoryCenterer/Inventory/ItemListBackground"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 23.0
offset_top = 15.0
offset_right = 135.0
offset_bottom = 55.0
text = "Inventory:"

[node name="InventoryContainer" parent="CanvasLayer/InventoryCenterer/Inventory/ItemListBackground" instance=ExtResource("4_br31h")]
unique_name_in_owner = true
layout_mode = 2
offset_left = 23.0
offset_top = 45.0
offset_right = 281.0
offset_bottom = 345.0

[node name="ItemDescriptionBackground" type="ColorRect" parent="CanvasLayer/InventoryCenterer/Inventory"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
offset_left = -210.0
offset_top = 78.0
offset_right = 598.0
offset_bottom = 278.0
color = Color(0.212305, 0.212305, 0.212305, 1)
script = ExtResource("5_60gg5")

[node name="ItemName" type="Label" parent="CanvasLayer/InventoryCenterer/Inventory/ItemDescriptionBackground"]
layout_mode = 0
offset_left = 186.0
offset_top = 12.0
offset_right = 428.0
offset_bottom = 48.0

[node name="ItemDesc" type="Label" parent="CanvasLayer/InventoryCenterer/Inventory/ItemDescriptionBackground"]
layout_mode = 0
offset_left = 185.0
offset_top = 59.0
offset_right = 773.0
offset_bottom = 182.0
autowrap_mode = 2

[node name="ItemImage" type="TextureRect" parent="CanvasLayer/InventoryCenterer/Inventory/ItemDescriptionBackground"]
layout_mode = 0
offset_left = 18.0
offset_top = 19.0
offset_right = 168.0
offset_bottom = 169.0
expand_mode = 1

[connection signal="item_selected" from="CanvasLayer/InventoryCenterer/Inventory/ItemListBackground/InventoryContainer" to="CanvasLayer/InventoryCenterer" method="update_description"]
